--- a/app/src/main/res/layout/intent_agregar.xml
+++ b/app/src/main/res/layout/intent_agregar.xml
@@ -5,11 +5,19 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editText1"
+    <!-- Campo 1 modificado para usar AutoCompleteTextView -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter field 1" />
+        android:hint="Enter field 1">
+
+        <AutoCompleteTextView
+            android:id="@+id/editText1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
         android:id="@+id/editText2"
