funciona referencias fijadas por PI PV PC TO y por los 6 caracteres que debe contener + filtros tanto por tipos de pizza como por referencia y referencia+descripcion

--- a/app/src/main/res/menu/menu_pizzas.xml
+++ b/app/src/main/res/menu/menu_pizzas.xml
@@ -51,6 +51,7 @@
                 android:checkable="true"
                 android:title="Referencia" />
             <item
+                android:id="@+id/itemRefDesc"
                 android:checkable="true"
                 android:title="Referencia + Descripcion" />
         </menu>
