--- a/app/src/main/res/layout/recycler_card_pizzas.xml
+++ b/app/src/main/res/layout/recycler_card_pizzas.xml
@@ -133,7 +133,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/baseline_local_pizza_24" />
+                    android:src="@drawable/pizza" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
